8-troubleshoot-QA-Scenario/k8s-reference/k8s-yaml-templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: my-ingress-class
spec:
  controller: nginx.org/ingress-controller
