8-troubleshoot-QA-Scenario/k8s-reference/k8s-yaml-templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-daemonset
  labels:
    app: my-daemon
spec:
  selector:
    matchLabels:
      app: my-daemon
  template:
    metadata:
      labels:
        app: my-daemon
    spec:
      containers:
      - name: my-daemon-container
        image: nginx:latest
        ports:
        - containerPort: 80
